2008-01-14  Jb Evain  <jbevain@novell.com>

	* Expression.cs: implement TypeIs.
	* ExpressionPrinter.cs: implement VisitTypeBinaryExpression.
	* TypeBinaryExpression.cs: add proper ctor.

2008-01-14  Jb Evain  <jbevain@novell.com>

	* Expression.cs, ExpressionPrinter.cs: fix for Quote's type.

2008-01-14  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs,
	* Expression.cs: revert part of Miguel's last patch.
	MakeBinary is expected to call the appropriate factory
	methods. Whose methods that are responsible for creating
	the good BinaryExpression, wether they use a custom method
	or not.

2008-01-14  Jb Evain  <jbevain@novell.com>

	* Expression.cs: MakeUnary is expected to call the appropriate
	factory methods.

2008-01-14  Miguel de Icaza  <miguel@novell.com>

	* Expression.cs (Constant, MakeBinary and consumers of it): Some
	more fill-up changes.

	MakeBinary will need much more work to support user-provided
	types.

2008-01-13  Jb Evain  <jbevain@novell.com>

	* *.cs: fresh implementation.