@@ -1,5 +1,10 @@
 2008-01-14  Jb Evain  <jbevain@novell.com>
 
+	* Expression.cs: TypeAs can't take value types.
+	* ExpressionPrinter.cs: implement TypeAs.
+
+2008-01-14  Jb Evain  <jbevain@novell.com>
+
 	* Expression.cs: implement TypeIs.
 	* ExpressionPrinter.cs: implement VisitTypeBinaryExpression.
 	* TypeBinaryExpression.cs: add proper ctor.
